# phoenix-rag

./: .env.example  .gitignore  README.md  app.py  demo.py  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
.streamlit/: secrets.toml.example
src/phoenix_rag/: __init__.py  agent.py  cli.py  config.py
src/phoenix_rag/retrieval/: __init__.py  chunking.py  ingestion.py  module.py
src/phoenix_rag/tools/: __init__.py  base.py  code_analyzer.py  complexity_calculator.py  registry.py  retrieval_tool.py  test_suggester.py
src/phoenix_rag/verification/: __init__.py  groundedness.py  module.py  self_evaluation.py
