[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phoenix-rag"
version = "0.1.0"
description = "RAG-enabled agent for code refactoring assistance"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Phoenix Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "langchain>=0.1.0",
    "langchain-ollama>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-chroma>=0.1.0",
    "chromadb>=0.4.22",
    "sentence-transformers>=2.3.0",
    "tiktoken>=0.5.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "gitpython>=3.1.0",
    "radon>=6.0.0",
    "streamlit>=1.30.0",
]

[project.urls]
Homepage = "https://github.com/kkipngenokoech/phoenix-rag"
Repository = "https://github.com/kkipngenokoech/phoenix-rag"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
anthropic = [
    "langchain-anthropic>=0.1.0",
    "anthropic>=0.18.0",
]
groq = [
    "langchain-groq>=0.1.0",
]

[project.scripts]
phoenix = "phoenix_rag.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
